--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -548,7 +548,7 @@ textarea {
 }
 
 .wrapper {
-  margin-top: 75px;
+  margin-top: 10px;
   margin-bottom: 25px;
 }
 
@@ -826,4 +826,18 @@ a.nav-home {
 
 .bordered{
   border: 5px solid darkgray;
+}
+
+[contenteditable="true"].single-line {
+    white-space: nowrap;
+    width:200px;
+    overflow: hidden;
+} 
+[contenteditable="true"].single-line br {
+    display:none;
+
+}
+[contenteditable="true"].single-line * {
+    display:inline;
+    white-space:nowrap;
 }
