--- a/assets/bootstrap-slider/css/styles.css
+++ b/assets/bootstrap-slider/css/styles.css
@@ -1,80 +1,189 @@
-.slider-vertical {
-  margin: 10px; }
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,300);
+@import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 
-.slider {
-  display: inline-block;
-  vertical-align: middle;
-  position: relative;
-  width: 100% !important; }
-  .slider.slider-horizontal {
-    height: 30px; }
-    .slider.slider-horizontal .slider-track {
-      height: 6px;
-      width: 100%;
-      margin-top: -3px;
-      top: 50%;
-      left: 0; }
-    .slider.slider-horizontal .slider-selection {
-      height: 100%;
-      top: 0;
-      bottom: 0; }
-    .slider.slider-horizontal .slider-handle {
-      margin-left: -12px;
-      margin-top: -9px; }
-      .slider.slider-horizontal .slider-handle.triangle {
-        border-width: 0 10px 10px 10px;
-        width: 0;
-        height: 0;
-        border-bottom-color: #0480be;
-        margin-top: 0; }
-  .slider.slider-vertical {
-    height: 220px;
-    width: 30px; }
-    .slider.slider-vertical .slider-track {
-      width: 6px;
-      height: 100%;
-      margin-left: -3px;
-      left: 50%;
-      top: 0; }
-    .slider.slider-vertical .slider-selection {
-      width: 100%;
-      left: 0;
-      top: 0;
-      bottom: 0; }
-    .slider.slider-vertical .slider-handle {
-      margin-left: -9px;
-      margin-top: -12px; }
-      .slider.slider-vertical .slider-handle.triangle {
-        border-width: 10px 0 10px 10px;
-        width: 1px;
-        height: 1px;
-        border-left-color: #0480be;
-        margin-left: 0; }
-  .slider input {
-    display: none; }
-  .slider .tooltip-inner {
-    white-space: nowrap; }
+body {
+    padding: 70px 0px;
+}
 
-.slider-track {
-  position: absolute;
-  cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.15);
-  border-radius: 4px; }
+.range {
+    display: table;
+    position: relative;
+    height: 25px;
+    margin-top: 20px;
+    background-color: rgb(245, 245, 245);
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
 
-.slider-selection {
-  position: absolute;
-  background-color: white;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15);
-  border-radius: 4px; }
+.range input[type="range"] {
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    -ms-appearance: none !important;
+    -o-appearance: none !important;
+    appearance: none !important;
 
-.slider-handle {
-  position: absolute;
-  width: 24px;
-  height: 24px;
-  background-color: white;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15);
-  border: 0px solid transparent; }
-  .slider-handle.round {
-    border-radius: 24px; }
-  .slider-handle.triangle {
-    background: transparent none; }
+    display: table-cell;
+    width: 100%;
+    background-color: transparent;
+    height: 25px;
+    cursor: pointer;
+}
+.range input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    -ms-appearance: none !important;
+    -o-appearance: none !important;
+    appearance: none !important;
+
+    width: 11px;
+    height: 25px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0px;
+    background-color: rgb(153, 153, 153);
+}
+
+.range input[type="range"]::-moz-slider-thumb {
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    -ms-appearance: none !important;
+    -o-appearance: none !important;
+    appearance: none !important;
+    
+    width: 11px;
+    height: 25px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0px;
+    background-color: rgb(153, 153, 153);
+}
+
+.range #exp-label {
+    display: table-cell;
+    padding: 3px 5px 2px;
+    min-width: 40px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(153, 153, 153);
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    width: 1%;
+    white-space: nowrap;
+    vertical-align: middle;
+
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+.range output {
+    display: table-cell;
+    padding: 3px 5px 2px;
+    min-width: 40px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(153, 153, 153);
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    width: 1%;
+    white-space: nowrap;
+    vertical-align: middle;
+
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    user-select: none;
+}
+.range input[type="range"] {
+    outline: none;
+}
+
+.range.range-primary input[type="range"]::-webkit-slider-thumb {
+    background-color: rgb(66, 139, 202);
+}
+.range.range-primary input[type="range"]::-moz-slider-thumb {
+    background-color: rgb(66, 139, 202);
+}
+.range.range-primary output {
+    background-color: rgb(66, 139, 202);
+}
+.range.range-primary input[type="range"] {
+    outline-color: rgb(66, 139, 202);
+}
+
+.range.range-success input[type="range"]::-webkit-slider-thumb {
+    background-color: rgb(92, 184, 92);
+}
+.range.range-success input[type="range"]::-moz-slider-thumb {
+    background-color: rgb(92, 184, 92);
+}
+.range.range-success output {
+    background-color: rgb(92, 184, 92);
+}
+.range.range-success input[type="range"] {
+    outline-color: rgb(92, 184, 92);
+}
+
+.range.range-info input[type="range"]::-webkit-slider-thumb {
+    background-color: rgb(91, 192, 222);
+}
+.range.range-info input[type="range"]::-moz-slider-thumb {
+    background-color: rgb(91, 192, 222);
+}
+.range.range-info output {
+    background-color: rgb(91, 192, 222);
+}
+.range.range-info input[type="range"] {
+    outline-color: rgb(91, 192, 222);
+}
+
+.range.range-warning input[type="range"]::-webkit-slider-thumb {
+    background-color: rgb(240, 173, 78);
+}
+.range.range-warning input[type="range"]::-moz-slider-thumb {
+    background-color: rgb(240, 173, 78);
+}
+.range.range-warning output {
+    background-color: rgb(240, 173, 78);
+}
+.range.range-warning input[type="range"] {
+    outline-color: rgb(240, 173, 78);
+}
+
+.range.range-danger input[type="range"]::-webkit-slider-thumb {
+    background-color: rgb(217, 83, 79);
+}
+.range.range-danger input[type="range"]::-moz-slider-thumb {
+    background-color: rgb(217, 83, 79);
+}
+.range.range-danger output {
+    background-color: rgb(217, 83, 79);
+}
+.range.range-danger input[type="range"] {
+    outline-color: rgb(217, 83, 79);
+}
