--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -732,6 +732,24 @@ ul.grid.columns-3 li {
    transition: all 0.2s;
    -webkit-transition: all 0.2s;
 }
+
+.icon-1{
+   text-align: center;
+   vertical-align: middle;
+   height: 100px;
+   width: 100px;
+   border-radius: 50%;
+  -webkit-border-radius:50%;
+  -moz-border-radius:50%;
+  -o-border-radius:50%;
+   background-color: #999999;
+   color: #FFFFFF;
+   margin: 0 auto 20px;
+   border: 4px solid #CCCCCC;
+   transition: all 0.2s;
+   -webkit-transition: all 0.2s;
+}
+
 .choice i{
     font-size: 30px;
     line-height: 111px;
@@ -843,4 +861,13 @@ a.nav-home {
 [contenteditable="true"].single-line * {
     display:inline;
     white-space:nowrap;
+}
+.dashed-bottom:before {
+  content: "";
+  position: absolute;
+  top: -4px;
+  left: 0;
+  border-width: 2px;
+  border-color: aqua;
+  border-style: dashed;
 }
