--- a/assets/css-flip/css/flip.css
+++ b/assets/css-flip/css/flip.css
@@ -85,7 +85,7 @@
   background: -ms-linear-gradient(top,  #9ee6d2 0%,#19b15c 100%);
   background: linear-gradient(to bottom,  #9ee6d2 0%,#19b15c 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9ee6d2', endColorstr='#19b15c',GradientType=0 );
-
+  border: 3px solid #157c43;
 }
 
 .rarity-card-uncommon {
@@ -98,6 +98,7 @@
   background: -ms-linear-gradient(top,  #79c1e9 0%,#1f74c4 100%);
   background: linear-gradient(to bottom,  #79c1e9 0%,#1f74c4 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#79c1e9', endColorstr='#1f74c4',GradientType=0 );
+  border: 3px solid #174671;
 }
 
 .rarity-card-rare {
@@ -110,6 +111,7 @@
   background: -ms-linear-gradient(top,  #a39fdc 0%,#633ca6 100%);
   background: linear-gradient(to bottom,  #a39fdc 0%,#633ca6 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a39fdc', endColorstr='#633ca6',GradientType=0 );
+  border: 3px solid #452974;
 }
 
 .rarity-card-legendary {
@@ -120,8 +122,9 @@
   background: -webkit-linear-gradient(top,  #fcb738 0%,#d05c1f 100%);
   background: -o-linear-gradient(top,  #fcb738 0%,#d05c1f 100%);
   background: -ms-linear-gradient(top,  #fcb738 0%,#d05c1f 100%);
-  background: linear-gradient(to bottom,  #fcb738 0%,#d05c1f 100%);
+  background: linear-gradient(to bottom,  #fcb738 0%,#a84e1e 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcb738', endColorstr='#d05c1f',GradientType=0 );
+  border: 3px solid #9b481b;
 }
 
 .rarity-card-bluemoon {
@@ -134,6 +137,7 @@
   background: -ms-linear-gradient(top,  #fd876d 0%,#eb2d21 100%);
   background: linear-gradient(to bottom,  #fd876d 0%,#eb2d21 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fd876d', endColorstr='#eb2d21',GradientType=0 );
+  border: 3px solid #af231a;
 }
 
 .questpin-info {
