--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body {
+  background-image: url(../assets/images/padded.png);
+  background-repeat: repeat;
+}
+
 #wrapper {
     position: relative;
 }
