--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1041,16 +1041,24 @@ ol {
 
 .edit-profile-dialog .modal-dialog {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   padding: 0;
   margin: 0;
 }
 
 .edit-profile-dialog .modal-header {
   background-color: white !important;
+  color: #73afad !important;
+}
+
+.edit-profile-dialog .bootstrap-dialog-title {
+  background-color: white !important;
+  color: #73afad !important;
 }
 
 .edit-profile-dialog .modal-content {
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   border-radius: 0px;
 }
