--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -833,12 +833,6 @@ ul.scrollable-menu {
   background-color: blue;
 }
 
-
-.carousel-img {
-  height: 350px;
-  max-height: 350px;
-}
-
 a.nav-home {
   color: #d9853c;
 }
@@ -1063,23 +1057,19 @@ ol {
   border-radius: 0px;
 }
 
-html,body{height:100%;}
-.carousel,.item,.active{height:100%;}
-.carousel-inner{height:100%;}
-.fill{width:100%;height:100%;background-position:center;background-size:cover;}
-
-/* faster sliding speed */
-.carousel-inner > .item {
-    -webkit-transition: 0.3s ease-in-out left;
-    -moz-transition: 0.3s ease-in-out left;
-    -o-transition: 0.3s ease-in-out left;
-    transition: 0.3s ease-in-out left;
+#myCarousel .nav a small
+{
+    display: block;
 }
-
-/* keep full widget on smaller screens */
-@media (max-width: 767px) { 
-	body {
-		padding-left: 0;
-		padding-right: 0;
-	}
+#myCarousel .nav
+{
+    background: #eee;
 }
+.nav-justified > li > a
+{
+    border-radius: 0px;
+}
+.nav-pills>li[data-slide-to="0"].active a { background-color: #16a085; }
+.nav-pills>li[data-slide-to="1"].active a { background-color: #e67e22; }
+.nav-pills>li[data-slide-to="2"].active a { background-color: #2980b9; }
+.nav-pills>li[data-slide-to="3"].active a { background-color: #8e44ad; }
