--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@
         width: 20%;
         float: left;
     }
+  #feeder-container {
+    position: fixed;
+    margin-right: 15px;
+  }
 }
 
 @media (min-width: 992px) {
@@ -1073,3 +1077,30 @@ ol {
 .nav-pills>li[data-slide-to="1"].active a { background-color: #e67e22; }
 .nav-pills>li[data-slide-to="2"].active a { background-color: #2980b9; }
 .nav-pills>li[data-slide-to="3"].active a { background-color: #8e44ad; }
+
+#stream-container {
+  height: 80vh;
+  overflow-y: auto;
+}
+
+#stream-container::-webkit-scrollbar {
+    width: 5px;
+}
+ 
+#stream-container::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+#stream-container::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+.banner {
+  background-color: #73afad;
+  border-bottom: 3px dashed white;
+  padding: 10px;
+  color: white;
+}
+
+#feeder {
+  padding: 0;
+}
