--- a/assets/staircase/staircase.css
+++ b/assets/staircase/staircase.css
@@ -156,6 +156,20 @@ house 4 captain josephus    #6688cc   #7396db
   border-left: 1px solid #6688cc;
   border-right: 1px solid #6688cc;
 }
+
+.header-name.house-gray{
+  background-color: #909090;
+}
+
+.header-lvl-house.house-gray,.footer-place.house-gray{
+  background-color: #a8a8a8;
+}
+
+.stair-step.house-gray{
+  border-left: 1px solid #909090;
+  border-right: 1px solid #909090;
+}
+
 .white-link {
   color: white;
 }
