--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@
     margin-left: 0px;
     margin-right: 0px;
   }
+  .ribbon {
+    width: 230px;
+    font-size: 18px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -34,6 +38,11 @@
   .table-container {
     margin-left: 50px;
     margin-right: 50px;
+  }
+  
+  .ribbon {
+    width: 550px;
+    font-size:24px;
   }
 }
 
@@ -168,118 +177,84 @@ select[readonly] {
 }
 
 .ribbon {
-    margin: 0px;
-    width: 130px;
-    height: 280px;
     position: absolute;
-    overflow: hidden;
-}
-
-.ribbon .inset {
-    width: 0px;
-    height: 55px;
-    position: absolute;
-    top: -50px;
-    left: -10px;
-    z-index: 5;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-    background: rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
-}
-
-.ribbon .wrapper {
-    position: relative;
-    width: 100px;
-    height: 250px;
-    overflow: hidden;
-    margin-top: 100px;
-    border-left: 1px solid #487673;
-    border-right: 1px solid #487673;
-}
-
-.ribbon .base {
-    height: 200px;
-    width: 100px;
-    background: #568d8a;
-/*
-    background: rgb(199, 59, 60);
-    background: -moz-linear-gradient(top, rgba(199, 59, 60, 1) 0%, rgba(184, 32, 31, 1) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(199, 59, 60, 1)), color-stop(100%, rgba(184, 32, 31, 1)));
-    background: -webkit-linear-gradient(top, rgba(199, 59, 60, 1) 0%, rgba(184, 32, 31, 1) 100%);
-    background: -o-linear-gradient(top, rgba(199, 59, 60, 1) 0%, rgba(184, 32, 31, 1) 100%);
-    background: -ms-linear-gradient(top, rgba(199, 59, 60, 1) 0%, rgba(184, 32, 31, 1) 100%);
-    background: linear-gradient(top, rgba(199, 59, 60, 1) 0%, rgba(184, 32, 31, 1) 100%);
-*/
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#c73b3c', endColorstr='#b8201f', GradientType=0);
-    position: relative;
-    z-index: 2;
-}
-
-.ribbon .base:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    width: 86px;
-    left: 6px;
-    height: 242px;
-    border-left: 1px dashed #436d6b;
-    border-right: 1px dashed #436d6b;
-}
-
-.ribbon .base:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    width: 86px;
-    left: 7px;
-    height: 242px;
-    border-left: 1px dashed #65a7a3;
-    border-right: 1px dashed #65a7a3;
-}
-
-.ribbon .left_corner {
-    width: 100px;
-    height: 100px;
-    background: #568d8a;
-/*    background: #b8201f;*/
-    position: absolute;
-    bottom: 20px;
-    left: -50px;
-    z-index: 1;
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-.ribbon .right_corner {
-    width: 100px;
-    height: 100px;
-    background: #568d8a;
-/*    background: #b8201f;*/
-    position: absolute;
-    bottom: 20px;
-    right: -50px;
-    z-index: 1;
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-.ribbon-horizontal {
-    -webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
-    transform: rotate(90deg);
-}
+    text-align: center;
+    background: #d64b4b;
+    background: -webkit-gradient(linear, left top, left bottom, from(#d64b4b), to(#ab2c2c));
+    background: -webkit-linear-gradient(top, #d64b4b, #ab2c2c);
+    background: -moz-linear-gradient(top, #d64b4b, #ab2c2c);
+    background: -ms-linear-gradient(top, #d64b4b, #ab2c2c);
+    background: -o-linear-gradient(top, #d64b4b, #ab2c2c);
+    background-image: -ms-linear-gradient(top, #d64b4b 0%, #ab2c2c 100%);
+    -webkit-box-shadow: rgba(000,000,000,0.3) 0 1px 1px;
+    -moz-box-shadow: rgba(000,000,000,0.3) 0 1px 1px;
+    box-shadow: rgba(000,000,000,0.3) 0 1px 1px;
+    font-family: 'Helvetica Neue',Helvetica, sans-serif;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+   }
+.ribbon h1 {
+   font-size: 25px!important;
+   color: #f8ecec;
+   text-shadow: #d65c5c 0 1px 0;
+   margin:0px;
+   padding: 15px 10px;
+   }
+.ribbon:before, .ribbon:after {
+   content: '';
+   position: absolute;
+   display: block;
+   bottom: -1em;
+   border: 1.5em solid #c23a3a;
+   z-index: -1;
+   }
+.ribbon:before {
+   left: -2em;
+   border-right-width: 1.5em;
+   border-left-color: transparent;
+   -webkit-box-shadow: rgba(000,000,000,0.4) 1px 1px 1px;
+   -moz-box-shadow: rgba(000,000,000,0.4) 1px 1px 1px;
+   box-shadow: rgba(000,000,000,0.4) 1px 1px 1px;
+   }
+.ribbon:after {
+   right: -2em;
+   border-left-width: 1.5em;
+   border-right-color: transparent;
+   -webkit-box-shadow: rgba(000,000,000,0.4) -1px 1px 1px;
+   -moz-box-shadow: rgba(000,000,000,0.4) -1px 1px 1px;
+   box-shadow: rgba(000,000,000,0.4) -1px 1px 1px;
+   }
+.ribbon .ribbon-content:before, .ribbon .ribbon-content:after {
+   border-color: #871616 transparent transparent transparent;
+   position: absolute;
+   display: block;
+   border-style: solid;
+   bottom: -1em;
+   content: '';
+   }
+.ribbon .ribbon-content:before {
+   left: 0;
+   border-width: 1em 0 0 1em;
+   }
+.ribbon .ribbon-content:after {
+   right: 0;
+   border-width: 1em 1em 0 0;
+   }
+.ribbon-stitches-top {
+   margin-top:2px;
+   border-top: 1px dashed rgba(0, 0, 0, 0.2);
+   -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+   -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+   box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.5);
+   }
+.ribbon-stitches-bottom {
+   margin-bottom:2px;
+   border-top: 1px dashed rgba(0, 0, 0, 0.2);
+   -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+   -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+   box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.3);
+   }
 
 .error {
     font-size: 8.5pt;
